# statutory-duty-extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/ground_truth_json/: uksi_2012_2089.json  uksi_2012_8.json  uksi_2013_351.json  uksi_2014_2672.json
data/ground_truth_raw/: dataset.xlsx
prompts/: system_prompt.txt  user_prompt.txt
src/statutory_duty_extractor/: __init__.py  cli.py  extractor.py  llm.py  models.py
tests/: __init__.py  test_models.py
