[project]
name = "statutory-duty-extractor"
version = "0.1.0"
description = "Extract statutory duties from UK statutory instruments using Azure OpenAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.35.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "types-python-dateutil>=2.9.0.20250708",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
statutory-duty-extractor = "statutory_duty_extractor.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
